# insta-stamp-test

./: Dockerfile  docker-compose.yml  pyproject.toml  pyproject_.toml  requirements.txt  secrets.json
config/: settings.py  urls.py  wsgi.py
insta_admin/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
insta_admin/migrations/: 0001_initial.py  0002_auto_20230403_1516.py  0002_instasetting_hashtags_selected.py  0003_auto_20230422_0901.py
insta_stamp/: admin.py  apps.py  insta_list.xlsx  models.py  serializers.py  urls.py  views.py  ~$insta_list.xlsx
insta_stamp/migrations/: 0001_initial.py  0002_auto_20230403_1359.py
jobs/: jobs.py  updater.py
sqlserver/.system/: instance_id
sqlserver/.system/profiles/Client/AppData/LocalLow/Microsoft/CryptnetUrlCache/MetaData/: 2F46314B7FBBD40F70A27063BBAC4B7D  55C4822D0F35FE8F4F67713B4F628992
sqlserver/.system/system/: licensing.hiv  lsa.hiv  security.hiv
sqlserver/.system/system/system32/Microsoft/Protect/S-1-5-18/User/: Preferred  f40596f6-354c-4b6c-a27c-073d5e4dd304
sqlserver/data/: mastlog.ldf  model_msdblog.ldf  model_replicatedmaster.ldf  msdblog.ldf
sqlserver/log/: HkEngineEventFile_0_133257335268780000.xel  HkEngineEventFile_0_133257338429280000.xel  HkEngineEventFile_0_133257353311050000.xel  errorlog  errorlog.1  errorlog.2  log.trc  log_1.trc  log_2.trc  system_health_0_133257335342220000.xel  system_health_0_133257338457760000.xel  system_health_0_133257353345570000.xel
sqlserver/secrets/: machine-key
