[tool.poetry]
name = "insta-stamp-test"
version = "0.1.0"
description = ""
authors = ["조현일 <himzei@gmail.com>"]
readme = "README.md"
packages = [{include = "insta_stamp_test"}]

[tool.poetry.dependencies]
python = "^3.10"
django-environ = "^0.10.0"
django-mssql-backend = "^2.8.1"
pyodbc = "^4.0.35"
django-dotenv = "^1.4.2"
djangorestframework = "^3.14.0"
requests = "^2.28.2"
beautifulsoup4 = "^4.12.0"
pandas = "^1.5.3"
APScheduler = "^3.10.1"
gunicorn = "^20.1.0"
whitenoise = "^6.4.0"
djangorestframework-csv = "^2.1.1"
psycopg2-binary = "^2.9.6"
openpyxl = "^3.1.2"
django = "3.0"
django-cors-headers = "3.0.0"
django-utils-six = "^2.0"
selenium = "^4.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
